--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+    implementation "com.google.firebase:firebase-auth-ktx:21.1.0"
+    implementation "com.firebaseui:firebase-ui-auth:8.0.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
