--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_ui_version = '1.1.1'
         hilt_version = '2.36'
+        firebase_bom_version = '31.1.1'
     }
 
     repositories {
