--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    implementation "com.github.skydoves:landscapist-glide:2.0.2"
 }
