--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation "com.github.skydoves:landscapist-glide:2.0.2"
+    implementation 'io.github.grizzi91:bouquet:1.1.2'
 }
