--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.pfv.bombcatcher"
         minSdk 26
         targetSdk 34
-        versionCode 1
+        versionCode 2
         versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,12 +23,22 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            keyAlias = "keyalias"
+            keyPassword = "keypassword"
+            storePassword = "storepassword"
+            storeFile = file("keys/keystore")
+        }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled = false
             debuggable = false
-            shrinkResources = true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -76,12 +86,12 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-compose:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.material:material:1.5.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -91,4 +101,5 @@ dependencies {
 
     implementation "com.github.skydoves:landscapist-glide:2.0.2"
     implementation 'io.github.grizzi91:bouquet:1.1.2'
+    implementation("com.google.accompanist:accompanist-systemuicontroller:0.28.0")
 }
