--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.pfv.bombcatcher"
         minSdk 26
         targetSdk 34
-        versionCode 2
-        versionName "1.0.0"
+        versionCode 4
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -102,4 +102,6 @@ dependencies {
     implementation "com.github.skydoves:landscapist-glide:2.0.2"
     implementation 'io.github.grizzi91:bouquet:1.1.2'
     implementation("com.google.accompanist:accompanist-systemuicontroller:0.28.0")
+    implementation "androidx.compose.material3:material3:1.1.2"
+    implementation("com.airbnb.android:lottie-compose:6.0.1")
 }
