--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.13'
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath("org.jetbrains.kotlin:kotlin-serialization:1.9.10")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
